# kci

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kci/: __init__.py  __main__.py  cli.py  comparison.py  config.py  models.py  runner.py  vm.py
src/kci/scripts/: kernel-coverage.sh
